feat: support thinking budget config for gemini

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "homepage": "https://github.com/openai-translator/bob-plugin-openai-translator",
   "scripts": {
-    "build": "rollup --config rollup.config.ts --configPlugin typescript"
+    "build": "rollup --config rollup.config.ts --configPlugin typescript",
+    "postbuild": "node scripts/package.js"
   },
   "devDependencies": {
     "@bob-translate/types": "1.1.0",
@@ -21,7 +22,8 @@
     "rollup": "4.43.0",
     "rollup-plugin-copy": "3.5.0",
     "tslib": "2.8.1",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "archiver": "^7.0.1"
   },
   "engines": {
     "node": "22.15.0"
