--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES5",
+    "lib": [
+      "ES2017",
+      "DOM"
+    ],
     "types": [
       "@bob-translate/types"
     ],
